# Legacy-Code-Cartographer

./: .gitignore  CODEBASE.md  LICENSE  README.md  RECONNAISSANCE.md  cartograph.py  cli.py  conftest.py  constitution.md  debug_ast.py  debug_discovery.py  main.py  onboarding_brief.md  pyproject.toml  test.sql  test_repl.sh  verify_parity.py
.agents/: STATUS_DIAGNOSTIC.md
.agents/rules/: AGENT.md  constitution.md
.cartography/: meltano_graph.json  test_graph.json
.cartography/apache_airflow.git/: CODEBASE.md  onboarding_brief.md
.cartography/meltano/: onboarding_brief.md
.cartography/test_repo/: CODEBASE.md  interactive_graph.html  knowledge_graph.json  onboarding_brief.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  router.tsx
frontend/src/pages/: AnalyzePage.tsx  ChatView.tsx  CodebaseDashboard.tsx  (+9 more)
src/: orchestrator.py  repo.py
src/agents/: archivist.py  hydrologist.py  navigator.py  semanticist.py  surveyor.py  visualizer.py
src/analyzers/: git_history.py  language_router.py  python_lineage.py  semantic_index.py  sql_lineage.py
src/core/: __init__.py  cartography_service.py  config_service.py  visualization_service.py
src/graph/: data_lineage.py  knowledge_graph.py
src/models/: nodes.py  schemas.py
src/providers/: base.py  factory.py  gemini_provider.py
src/services/: chat_service.py  discovery_service.py  ingest_service.py  navigator_service.py  server_manager.py
tests/integration/: test_cli_gui_parity.py  test_orchestration.py  test_services.py
tests/unit/: test_agents.py
(+8 files in other folders)
