[project]
name = "the-brownfield-cartographer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gitpython>=3.1.46",
    "google-genai>=1.66.0",
    "google-generativeai>=0.8.6",
    "httpx>=0.28.1",
    "jedi>=0.19.2",
    "langgraph>=1.0.10",
    "networkx>=3.6.1",
    "numpy>=2.4.3",
    "openai>=2.26.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "qdrant-client>=1.17.0",
    "scipy>=1.17.1",
    "sqlglot>=29.0.1",
    "tree-sitter>=0.25.2",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-sql>=0.3.11",
]
